[package]
name = "wtf"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
eframe = "0.33.0"
egui = "0.33.0"
index-map = "0.1.0"
indexmap = "2.12.0"
itertools = "0.14.0"
nix = { version = "0.30.1", features = ["ptrace", "signal"] }
ordered-float = "5.1.0"
syscalls = "0.7.0"
